--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ Ao utilizar os serviços da RPS Rastreadores, o cliente reconhece que a empresa 
         </ul>
       </nav>
       <a 
-  class="btn" 
+  class="btn1" 
   href="https://wa.me/5513997728395?text=Olá!%20Quero%20falar%20com%20um%20consultor%20da%20RPS%20sobre%20proteção%20veicular." 
   target="_blank">
   Fale Conosco
@@ -232,7 +232,7 @@ modal.style.display = "none";
   <p class="preco verde">Proteja até mais de um veículo!</p>
 
   <a 
-    href="https://api.whatsapp.com/send?phone=5513997728395&text=Olá!%20Tenho%20mais%20de%20um%20veiculo%20e%20tenho%20interesse%20em%20contratar%20um%20palno%20para%20ambos." 
+    href="https://api.whatsapp.com/send?phone=5513997728395&text=Olá!%20Tenho%20mais%20de%20um%20veiculo%20e%20tenho%20interesse%20em%20contratar%20um%20plano%20para%20ambos." 
     class="btn-mini"
     target="_blank">
     SAIBA MAIS
@@ -628,4 +628,6 @@ modal.style.display = "none";
 
 </body>
 </html>
+
+
 
